data/derived/fa15/progs/unify/prog3700.ml.out
Characters 298-300:
  | Times (t1,t2)		    -> Printf.printf "%s*%s" t1 t2
                                                ^^
Error: This expression has type expr but an expression was expected of type
         string
